# it3030-paf-2026-smart-campus-group-Y3S2-WE-159

./: LICENSE  README.md  docker-compose.production.yml  docker-compose.yml  example.env  init.sql  package-lock.json
.devcontainer/ai_python/: devcontainer.json
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
ai_python/: .env.example  .gitignore  Dockerfile  Makefile  README.md  langgraph.json  pyproject.toml  test.ipynb
ai_python/src/simple_agent/: __init__.py  graph.py
ai_python/tests/integration_tests/: test_graph.py
ai_python/tests/unit_tests/: test_configuration.py
backend/: .dockerignore  API_ENDPOINTS.md  AUTH0_MANAGEMENT_API_INTEGRATION.md  Dockerfile  note.md  pom.xml
frontend/: .json  Dockerfile  README.md  api-guide.md  components.json  next.config.mjs  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: layout.tsx  page.tsx
frontend/app/ai/: page.tsx
frontend/app/booking/: page.tsx
frontend/app/components/: page.tsx
frontend/app/notifications/: page.tsx
frontend/app/policy/: page.tsx
frontend/app/resources/: ResourcesClient.tsx  page.tsx
frontend/app/tickets/: page.tsx
frontend/hooks/: useNotifications.ts
frontend/lib/: Auth0ErrorPrope.ts  FixedLangGraphTransport.ts  api-client.ts  auth-context.tsx  auth-middleware.ts  auth0.ts  formatDateTime.ts  formatTime.ts  getAuthToken.ts  getToken.ts  page-protection.ts  roles.ts  server-api.ts
other/: smartcampulogo.af
tmp/: .dockerignore  Dockerfile  testing.ipynb
(+209 files in other folders)
